# crewai_demo

./: .env_example  pyproject.toml
output/: report.md
output/chat_reports/: sid_bd04518058f21_19d2a0ac722.md
src/crewai_demo/: chat.py  crew.py  db.py  historico.py  main.py  output_reports.py  reporting.py  webapp.py
src/crewai_demo/config/: agents.yaml  db_schema.yaml  tasks.yaml  tasks_assistant.yaml  tasks_db.yaml  tasks_informes.yaml  tasks_no_db.yaml  tasks_router.yaml
src/crewai_demo/tools/: db_allowed.py  db_query_tool.py  schema_tool.py  serper_tool.py
web/: index.html
web/assets/: app.js  styles.css
