[project]
name = "crewai_demo"
version = "0.1.0"
description = "crewai_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyyaml>=6.0.1",
    "crewai==0.203.2",
    "fastapi>=0.115.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.5",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
crewai_demo = "crewai_demo.main:run"
run_crew = "crewai_demo.main:run"
train = "crewai_demo.main:train"
replay = "crewai_demo.main:replay"
test = "crewai_demo.main:test"
run_with_trigger = "crewai_demo.main:run_with_trigger"
serve_ui = "crewai_demo.webapp:run_server"
db_check = "crewai_demo.db:cli_check"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
